--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "aos": "^2.3.4",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-router-dom": "^6.16.0",
+    "scroller-motion": "^1.2.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
